_site/sql/hive/src/test/resources/ql/src/test/queries/positive/input9.q
FROM src1
INSERT OVERWRITE TABLE dest1 SELECT NULL, src1.key where NULL = NULL
