_site/sql/hive/src/test/resources/ql/src/test/queries/negative/invalid_index.q
FROM src
INSERT OVERWRITE TABLE dest1 SELECT src.key[0], src.value
